--- a/ansible/common/files/etc/lxc/default.conf
+++ b/ansible/common/files/etc/lxc/default.conf
@@ -1,6 +1,8 @@
 lxc.network.type = veth
 lxc.network.link = lbr01
 lxc.network.flags = up
+lxc.network.ipv4 = 192.168.1.100/24
+lxc.network.ipv4.gateway = 192.168.1.254
 
 #lxc.id_map = u 0 493216 65536
 #lxc.id_map = g 0 493216 65536
