--- a/ansible/base_web/files/var/lib/lxc/config
+++ b/ansible/base_web/files/var/lib/lxc/config
@@ -1,6 +1,8 @@
 lxc.network.type = veth
 lxc.network.flags = down
 lxc.network.link = lbr01
+lxc.network.ipv4 = 192.168.1.101/24
+lxc.network.ipv4.gateway = 192.168.1.254
 
 lxc.rootfs = {{ container_dir }}/rootfs
 
