--- a/ansible/base_web/files/var/lib/lxc/config
+++ b/ansible/base_web/files/var/lib/lxc/config
@@ -1,5 +1,5 @@
 lxc.network.type = veth
-lxc.network.flags = down
+lxc.network.flags = up
 lxc.network.link = lbr01
 lxc.network.ipv4 = 192.168.1.101/24
 lxc.network.ipv4.gateway = 192.168.1.254
