--- a/ansible/base_web/main.yml
+++ b/ansible/base_web/main.yml
@@ -27,7 +27,10 @@
       chdir: '{{ container_dir }}'
 
   - template: src=./files/var/lib/lxc/config dest={{ container_dir }}/config mode='0644'
-  - template: src=./files/etc/hostname dest={{ container_dir }}/rootfs/etc/hostname mode='0644'
+
+  - template: src=./files/{{ item.name }} dest={{ container_dir }}/rootfs/{{ item.name }} mode={{ item.mode }}
+    with_items:
+      - { name: '/etc/hostname', mode: '0600' }
     
   - lxc_container: 
       name: '{{ container_name }}'
@@ -37,7 +40,7 @@
       state: stopped
       container_command: |
         apt-get update
-        apt-get -y install apache2 iptables strace
+        apt-get -y install apache2 iptables strace aptitude
         apt-get clean
         systemctl enable apache2 
     notify:
