--- a/ansible/roles/base_web/tasks/main.yml
+++ b/ansible/roles/base_web/tasks/main.yml
@@ -24,8 +24,8 @@
       apt-get -y install apache2 iptables strace aptitude
       apt-get clean
       systemctl enable apache2 
-  notify:
-  - archive_base_web
 
-
+- shell: tar c config rootfs fstab | gzip > {{ repo_dir }}/{{ container_name }}.tar.gz
+  args:
+    chdir: '{{ container_dir }}'
 
