Set MIRROR variable for lxc-create to use apt-chacher.

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -24,6 +24,8 @@
       apt-get -y upgrade
       apt-get -y install iputils-ping
       apt-get clean
+  environment:
+    MIRROR: http://apt.h.ccmp.jp:3142/debian
 
 - shell: tar c config rootfs fstab | gzip > {{ repo_dir }}/{{ container_name }}.tar.gz
   args:
