--- a/ansible/roles/base_web/tasks/main.yml
+++ b/ansible/roles/base_web/tasks/main.yml
@@ -25,8 +25,8 @@
       apt-get clean
       systemctl enable apache2 
   environment:
-    MIRROR: http://apt.h.ccmp.jp:3142/debian
-
+    MIRROR: http://apt.h.ccmp.jp:3142/ftp.us.debian.org/debian
+    SECURITY_MIRROR: http://apt.h.ccmp.jp:3142/security.debian.org/
 
 - shell: tar c config rootfs fstab | gzip > {{ repo_dir }}/{{ container_name }}.tar.gz
   args:
