--- a/ansible/lvs.yml
+++ b/ansible/lvs.yml
@@ -11,6 +11,8 @@
   repo_dir: /work/image
   lxc_dir: /var/lib/lxc
   container_dir: '{{ lxc_dir }}/{{ container_name }}'
+  pkgs: 'ipvsadm iptables keepalived' 
+  extra_tasks: 'systemctl enable keepalived'
 
   pre_tasks:
     - stat: path={{ repo_dir }}/{{ base_container }}.tar.gz
