--- a/ansible/lvs.yml
+++ b/ansible/lvs.yml
@@ -5,14 +5,14 @@
 - hosts: mng
   remote_user: root
 
-- vars:
-  base_container: base-v1-0
-  container_name: base_web-v1-0
-  repo_dir: /work/image
-  lxc_dir: /var/lib/lxc
-  container_dir: '{{ lxc_dir }}/{{ container_name }}'
-  pkgs: 'ipvsadm iptables keepalived' 
-  extra_tasks: 'systemctl enable keepalived'
+  vars:
+    base_container: base-v1-0
+    container_name: base_web-v1-0
+    repo_dir: /work/image
+    lxc_dir: /var/lib/lxc
+    container_dir: '{{ lxc_dir }}/{{ container_name }}'
+    pkgs: 'ipvsadm iptables keepalived' 
+    extra_tasks: 'systemctl enable keepalived'
 
   pre_tasks:
     - stat: path={{ repo_dir }}/{{ base_container }}.tar.gz
