--- a/ansible/lvs.yml
+++ b/ansible/lvs.yml
@@ -24,5 +24,5 @@
   roles:
     - { role: common, when: "lxc_create.stat.xoth == 'False'" }
     - { role: base, when: "base_tgz.stat.exists == 'False'" }
-    - base_lvs
+    - base_middle
 
