--- a/ansible/lvs.yml
+++ b/ansible/lvs.yml
@@ -6,16 +6,17 @@
   remote_user: root
 
   vars:
-    base_container: base-v1-0
-    container_name: base_web-v1-0
+    base.container_name: base-v1-0
+    middle.container_name: base_web-v1-0
     repo_dir: /work/image
     lxc_dir: /var/lib/lxc
-    container_dir: '{{ lxc_dir }}/{{ container_name }}'
+    base.container_dir: '{{ lxc_dir }}/{{ base.container_name }}'
+    middle.container_dir: '{{ lxc_dir }}/{{ middle.container_name }}'
     pkgs: 'ipvsadm iptables keepalived' 
     extra_tasks: 'systemctl enable keepalived'
 
   pre_tasks:
-    - stat: path={{ repo_dir }}/{{ base_container }}.tar.gz
+    - stat: path={{ repo_dir }}/{{ base.container_name }}.tar.gz
       register: base_tgz
 
     - stat: path=/usr/bin/lxc-create
