--- a/ansible/roles/base_middle/tasks/main.yml
+++ b/ansible/roles/base_middle/tasks/main.yml
@@ -1,20 +1,20 @@
 
-- file: path={{ container_dir }} state=absent
-- file: path={{ container_dir }} state=directory
+- file: path={{ middle.container_dir }} state=absent
+- file: path={{ middle.container_dir }} state=directory
 - file: path={{ repo_dir }} state=directory 
 
-- shell: tar xfz {{ repo_dir }}/{{ base_container }}.tar.gz
+- shell: tar xfz {{ repo_dir }}/{{ base.container_name }}.tar.gz
   args:
-    chdir: '{{ container_dir }}'
+    chdir: '{{ middle.container_dir }}'
 
-- template: src=../files/var/lib/lxc/config dest={{ container_dir }}/config mode='0644'
+- template: src=../files/var/lib/lxc/config dest={{ middle.ontainer_dir }}/config mode='0644'
 
-- template: src=../files/{{ item.name }} dest={{ container_dir }}/rootfs/{{ item.name }} mode={{ item.mode }}
+- template: src=../files/{{ item.name }} dest={{ middle.container_dir }}/rootfs/{{ item.name }} mode={{ item.mode }}
   with_items:
     - { name: '/etc/hostname', mode: '0600' }
     
 - lxc_container: 
-    name: '{{ container_name }}'
+    name: '{{ middle.container_name }}'
     container_log: true
     template: debian
     template_options: --arch amd64 --release jessie
@@ -28,7 +28,7 @@
     MIRROR: http://apt.h.ccmp.jp:3142/ftp.us.debian.org/debian
     SECURITY_MIRROR: http://apt.h.ccmp.jp:3142/security.debian.org/
 
-- shell: tar c config rootfs fstab | gzip > {{ repo_dir }}/{{ container_name }}.tar.gz
+- shell: tar c config rootfs fstab | gzip > {{ repo_dir }}/{{ middle.container_name }}.tar.gz
   args:
-    chdir: '{{ container_dir }}'
+    chdir: '{{ middle.container_dir }}'
 
