--- a/ansible/roles/base_middle/tasks/main.yml
+++ b/ansible/roles/base_middle/tasks/main.yml
@@ -21,9 +21,9 @@
     state: stopped
     container_command: |
       apt-get update
-      apt-get -y install {{ pkgs }}
+      apt-get -y install {{ middle.pkgs }}
       apt-get clean
-      {{ extra_tasks }}
+      {{ middle.extra_tasks }}
   environment:
     MIRROR: http://apt.h.ccmp.jp:3142/ftp.us.debian.org/debian
     SECURITY_MIRROR: http://apt.h.ccmp.jp:3142/security.debian.org/
