--- a/ansible/lvs.yml
+++ b/ansible/lvs.yml
@@ -7,13 +7,13 @@
 
   vars:
     base: {
-      container_name: base-v1-0
+      container_name: base-v1-0, 
       container_dir: '{{ lxc_dir }}/{{ base.container_name }}'
     }
     middle: {
-      container_name: base_lvs-v1-0
-      container_dir: '{{ lxc_dir }}/{{ middle.container_name }}'
-      pkgs: 'ipvsadm iptables keepalived' 
+      container_name: base_lvs-v1-0, 
+      container_dir: '{{ lxc_dir }}/{{ middle.container_name }}',
+      pkgs: 'ipvsadm iptables keepalived',
       extra_tasks: 'systemctl enable keepalived'
     }
     repo_dir: /work/image
