--- a/ansible/lvs.yml
+++ b/ansible/lvs.yml
@@ -11,12 +11,12 @@
 
     base: {
       container_name: base-v1-0, 
-      container_dir: '{{ lxc_dir }}/{{ base.container_name }}'
+      container_dir: '{{ lxc_dir }}/{{ container_name }}'
     }
 
     middle: {
       container_name: base_lvs-v1-0, 
-      container_dir: '{{ lxc_dir }}/{{ middle.container_name }}',
+      container_dir: '{{ lxc_dir }}/{{ container_name }}',
       pkgs: 'ipvsadm iptables keepalived',
       extra_tasks: 'systemctl enable keepalived'
     }
