Fix Variable names 6

--- a/ansible/lvs.yml
+++ b/ansible/lvs.yml
@@ -10,7 +10,7 @@
     lxc_dir: /var/lib/lxc
 
     base: {
-      container_name: base-v1-0, 
+      "container_name": "base-v1-0", 
       container_dir: '{{ lxc_dir }}/{{ container_name }}'
     }
 
