--- a/ansible/lvs.yml
+++ b/ansible/lvs.yml
@@ -9,9 +9,10 @@
     repo_dir: /work/image
     lxc_dir: /var/lib/lxc
 
-    base: 
+    base {
       container_name: base-v1-0 
       container_dir: '{{ lxc_dir }}/{{ container_name }}'
+    }
 
     middle:
       container_name: base_lvs-v1-0 
