Fix Variable names 9

--- a/ansible/lvs.yml
+++ b/ansible/lvs.yml
@@ -9,9 +9,9 @@
     repo_dir: /work/image
     lxc_dir: /var/lib/lxc
 
-    base {
-      container_name: base-v1-0 
-      container_dir: '{{ lxc_dir }}/{{ container_name }}'
+    base: {
+      container_name: "base-v1-0" 
+      container_dir: "{{ lxc_dir }}/{{ container_name }}"
     }
 
     middle:
