--- a/ansible/lvs.yml
+++ b/ansible/lvs.yml
@@ -10,8 +10,8 @@
     lxc_dir: /var/lib/lxc
 
     base: {
-      container_name: "base-v1-0" 
-      container_dir: "{{ lxc_dir }}/{{ container_name }}",
+      container_name: "base-v1-0",
+      container_dir: "{{ lxc_dir }}/{{ container_name }}"
     }
 
     middle:
