--- a/ansible/lvs.yml
+++ b/ansible/lvs.yml
@@ -9,19 +9,16 @@
     repo_dir: /work/image
     lxc_dir: /var/lib/lxc
 
-    base: {
-      container_name: "base-v1-0",
-      container_dir: "{{ lxc_dir }}/{{ container_name }}"
-    }
+    base_container_name: base-v1-0
+    base_container_dir: {{ lxc_dir }}/{{ container_name }}
 
-    middle:
-      container_name: base_lvs-v1-0 
-      container_dir: '{{ lxc_dir }}/{{ container_name }}'
-      pkgs: 'ipvsadm iptables keepalived'
-      extra_tasks: 'systemctl enable keepalived'
+    middle_container_name: base_lvs-v1-0 
+    middle_container_dir: '{{ lxc_dir }}/{{ container_name }}'
+    pkgs: 'ipvsadm iptables keepalived'
+    extra_tasks: 'systemctl enable keepalived'
 
   pre_tasks:
-    - stat: path={{ repo_dir }}/{{ base.container_name }}.tar.gz
+    - stat: path={{ repo_dir }}/{{ base_container_name }}.tar.gz
       register: base_tgz
 
     - stat: path=/usr/bin/lxc-create
