--- a/ansible/lvs.yml
+++ b/ansible/lvs.yml
@@ -10,10 +10,10 @@
     lxc_dir: /var/lib/lxc
 
     base_container_name: base-v1-0
-    base_container_dir: '{{ lxc_dir }}/{{ container_name }}'
+    base_container_dir: '{{ lxc_dir }}/{{ base_container_name }}'
 
     middle_container_name: base_lvs-v1-0 
-    middle_container_dir: '{{ lxc_dir }}/{{ container_name }}'
+    middle_container_dir: '{{ lxc_dir }}/{{ middle_container_name }}'
     pkgs: 'ipvsadm iptables keepalived'
     extra_tasks: 'systemctl enable keepalived'
 
