--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -31,3 +31,10 @@
   args:
     chdir: '{{ base_container_dir }}'
 
+- stat: {{ repo_dir }}/{{ base_container_name }}.tar.gz 
+  register: tgz
+
+- shell: touch {{ repo_dir }}/sh1sum-{{ base_container_name }}={{ tgz.stat.checksum }}
+
+- shell: dpkg -l --admindir={{ base_container_dir }}/rootfs/var/lib/dpkg/ > {{ repo_dir }}/dpkg-l-{{ base_container_name }}
+
