--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -31,7 +31,7 @@
   args:
     chdir: '{{ base_container_dir }}'
 
-- stat: {{ repo_dir }}/{{ base_container_name }}.tar.gz 
+- stat: path={{ repo_dir }}/{{ base_container_name }}.tar.gz 
   register: tgz
 
 - shell: touch {{ repo_dir }}/sh1sum-{{ base_container_name }}={{ tgz.stat.checksum }}
