--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -21,7 +21,7 @@
       echo "root:password" | chpasswd
       apt-get update
       apt-get -y upgrade
-      apt-get -y install iputils-ping aptitude strace 
+      apt-get -y install iputils-ping strace 
       apt-get clean
   environment:
     MIRROR: http://apt.h.ccmp.jp:3142/ftp.us.debian.org/debian
@@ -34,7 +34,7 @@
 - stat: path={{ repo_dir }}/{{ base_container_name }}.tar.gz 
   register: tgz
 
-- shell: touch {{ repo_dir }}/sh1sum-{{ base_container_name }}={{ tgz.stat.checksum }}
+- shell: touch {{ repo_dir }}/{{ base_container_name }}.sha1sum.{{ tgz.stat.checksum }}
 
-- shell: dpkg -l --admindir={{ base_container_dir }}/rootfs/var/lib/dpkg/ > {{ repo_dir }}/dpkg-l-{{ base_container_name }}
+- shell: dpkg -l --admindir={{ base_container_dir }}/rootfs/var/lib/dpkg/ > {{ repo_dir }}/{{ base_container_name }}.dpkg-l
 
