--- a/ansible/roles/middle/tasks/main.yml
+++ b/ansible/roles/middle/tasks/main.yml
@@ -35,6 +35,6 @@
 - stat: path={{ repo_dir }}/{{ middle_container_name }}.tar.gz 
   register: tgz
 
-- shell: dpkg-query -W -f='${binary:Package}\t\t\t${Version}\n' --admindir={{ middle_container_dir }}/rootfs/var/lib/dpkg/ > {{ repo_dir }}/{{ middle_container_name }}.pkgs
+- shell: dpkg-query -W -f='${binary:Package}\t\t\t${Version}\n' --admindir={{ middle_container_dir }}/rootfs/var/lib/dpkg/ > {{ repo_dir }}/.pkgs.{{ middle_container_name }}
  
 
