--- a/ansible/web.yml
+++ b/ansible/web.yml
@@ -25,7 +25,7 @@
       register: lxc_create
 
   roles:
-    - { role: common, when: not lxc_create.stat.xoth }
+    - { role: common, when: not lxc_create.stat.exists }
     - { role: base, when: not base_tgz.stat.exists }
     - middle
 
