--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -27,11 +27,11 @@
     MIRROR: http://apt.h.ccmp.jp:3142/ftp.us.debian.org/debian
     SECURITY_MIRROR: http://apt.h.ccmp.jp:3142/security.debian.org/
 
-- file: path={{ middle_container_dir }}/rootfs/{{ item.name }} mode={{ item.mode }} state=directory
+- file: path={{ base_container_dir }}/rootfs/{{ item.name }} mode={{ item.mode }} state=directory
   with_items:
     - { name: '/root/.ssh/', mode: '0700' }
 
-- template: src=../files/{{ item.name }} dest={{ middle_container_dir }}/rootfs/{{ item.name }} mode={{ item.mode }}
+- template: src=../files/{{ item.name }} dest={{ base_container_dir }}/rootfs/{{ item.name }} mode={{ item.mode }}
   with_items:
     - { name: '/root/.ssh/authorized_keys', mode: '0644' }
 
