--- a/ansible/base.yml
+++ b/ansible/base.yml
@@ -1,5 +1,5 @@
 # Usage:
-#  ansible-playbook -i ./development ./base.yml -v
+#  ansible-playbook -i ./inventory/development ./base.yml -v
 #
 
 - hosts: mng
@@ -17,6 +17,6 @@
       register: lxc_create
 
   roles:
-    - { role: common, when: not lxc_create.stat.exists }
+    - { role: prep_mng, when: not lxc_create.stat.exists }
     - base
 
