--- a/ansible/roles/run_container/files/var/lib/lxc/config
+++ b/ansible/roles/run_container/files/var/lib/lxc/config
@@ -1,8 +1,15 @@
 lxc.network.type = veth
 lxc.network.flags = up
+lxc.network.name = eth0
 lxc.network.link = lbr01
 lxc.network.ipv4 = 192.168.1.111/24
 lxc.network.ipv4.gateway = 192.168.1.254
+
+lxc.network.type = veth
+lxc.network.flags = up
+lxc.network.name = eth1
+lxc.network.link = lbr10
+lxc.network.ipv4 = 10.0.0.1/24
 
 lxc.rootfs = {{ run_container_dir }}/rootfs
 
