--- a/cluster1/webhosts.yml
+++ b/cluster1/webhosts.yml
@@ -1,8 +1,8 @@
-- hosts: lvs
+- hosts: web 
   remote_user: root
   vars:
     vlan_interface: eth1
   roles:
     - lxchost
-    - lvshost      
+    - webhost      
     
