--- a/cluster1/lvs1.yml
+++ b/cluster1/lvs1.yml
@@ -1,31 +1,26 @@
 - hosts: mng
   remote_user: root
+  vars_files :
+    - common_vars.yml
+    - network_vars.yml
   vars:
-    archive_dir: /work/archives
-    remote_archive_dir: /tmp
-    local_archive_dir: /tmp
-    lxc_dir: /var/lib/lxc
-    repo_dir: /work/image
-    
-    real_web1_ip: 192.168.10.50
-    real_web1_port: 80
-    real_web2_ip: 192.168.10.51
-    real_web2_port: 80
+    base_container: lvs-v1-0
+    container_name: lvs1-v1-0
+    container_dir: "{{ lxc_dir }}/{{ container_name }}"
+#    VIRTUAL_SERVER_IP: 10.10.1.110
+#    VIRTUAL_SERVER_PORT: 80
+    LVS_VLAN1_IP: "{{ lvs1_vlan1_ip }}"
+    LVS_MYVLAN_IP: "{{ lvs1_myvlan_ip }}"
 
   roles:
-    - lvs1
+    - lvscnt
       
 - hosts: lvs01
   remote_user: root
-  vars:
-    local_archive_dir: /tmp
-    remote_archive_dir: /tmp
-    lxc_dir: /var/lib/lxc
-
   vars_files:
-    - roles/lvs1/vars/main.yml
+    - common_vars.yml
+  vars:
+    container_name: lvs1-v1-0
+
   roles:
     - deploy
-    
-      
-    
