--- a/cluster1/roles/webhost/tasks/main.yml
+++ b/cluster1/roles/webhost/tasks/main.yml
@@ -12,7 +12,7 @@
       mode: '0644'
   notify:
     - restart_network
-- name: Load ip_vs modules on host
-  shell: modprobe ip_vs
-- name: port forward enable
-  sysctl: name="net.ipv4.ip_forward" value=1 sysctl_set=yes
+
+- name: Load ip_tables modules on host
+  shell: modprobe ip_tables
+  
