--- a/cluster1/physical/roles/lvs/tasks/main.yml
+++ b/cluster1/physical/roles/lvs/tasks/main.yml
@@ -13,6 +13,6 @@
   notify:
     - restart_network
 - name: Load ip_vs modules on host
-  shell: modprobe ip_vs
+  shell: modprobe ip_vs ip_tables
 - name: port forward enable
   sysctl: name="net.ipv4.ip_forward" value=1 sysctl_set=yes
