--- a/cluster1/lvs-web-dr/roles/web/vars/main.yml
+++ b/cluster1/lvs-web-dr/roles/web/vars/main.yml
@@ -2,4 +2,4 @@ base_container: "{{ site.base_container }}"
 container_name: "{{ site.container_name }}"
 WEB_IP: "{{ site.local_ip }}"
 
-container_dir: "{{ lxc_dir }}/{{ container_name }}"
+container_dir: "{{ lxchost.lxc_dir }}/{{ container_name }}"
