--- a/cluster1/lvs-web-dr/roles/deploy/tasks/main.yml
+++ b/cluster1/lvs-web-dr/roles/deploy/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Copy container archive
   copy: >
     src={{ local_archive_dir }}/{{ container_name }}.tar.gz
-    dest={{ remote_archive_dir }}/{{ container_name }}.tar.gz
+    dest={{ lxchost.tmp_archive_dir }}/{{ container_name }}.tar.gz
 
 - name: Stopped provious container
   shell: lxc-stop -n {{ container_name }}
@@ -20,15 +20,15 @@
 - name: Extract container archive
   shell: tar xfz {{ remote_archive_dir }}/{{ container_name }}.tar.gz
   args:
-    chdir: '{{ lxc_dir }}/{{ container_name }}'
+    chdir: '{{ lxchost.lxc_dir }}/{{ container_name }}'
     
 - name: Remove archive 
-  file: path={{ remote_archive_dir }}/{{ container_name }}.tar.gz state=absent
+  file: path={{ lxchost.tmp_archive_dir }}/{{ container_name }}.tar.gz state=absent
   
 - name: Rename config filename 
   shell: mv config.prd config
   args:
-    chdir: '{{ lxc_dir }}/{{ container_name }}'
+    chdir: '{{ lxchost.lxc_dir }}/{{ container_name }}'
 
 - name: Start Container
   shell: lxc-start -n {{ container_name }} -d
