--- a/cluster1/lvs-web-dr/roles/lvs/vars/main.yml
+++ b/cluster1/lvs-web-dr/roles/lvs/vars/main.yml
@@ -3,4 +3,4 @@ container_name: "{{ site.container_name }}"
 LVS_GLOBAL_IP: "{{ site.global_ip }}"
 LVS_LOCAL_IP: "{{ site.local_ip }}"
 
-container_dir: "{{ lxc_dir }}/{{ container_name }}"
+container_dir: "{{ lxchost.lxc_dir }}/{{ container_name }}"
