--- a/cluster1/physical/lvs.yml
+++ b/cluster1/physical/lvs.yml
@@ -1,8 +1,9 @@
 - hosts: lvs
   remote_user: root
-  vars:
-    vlan_interface: eth1
+#  vars:
+#    vlan_interface: eth1
   roles:
-    - lxc
-    - lvs
+#    - { role: lxc }
+    - { role: vlan , vlan: "{{ lvshost.vlan }}" } 
+    - { role: lvs }
     
