--- a/cluster1/service1/lvs.yml
+++ b/cluster1/service1/lvs.yml
@@ -4,9 +4,6 @@
     - common_vars.yml
     - network_vars.yml
     - vlan_vars.yml
-#  tasks:
-#    - name: debug
-#      debug: var=lvs.lvs1
   roles:
     - { role: ../lvs-web-dr/roles/lvs , site: "{{ lvs.lvs1 }}" }
     - { role: ../lvs-web-dr/roles/lvs , site: "{{ lvs.lvs2 }}" }
@@ -19,5 +16,13 @@
 
   roles:
     - { role: ../lvs-web-dr/roles/deploy , site: "{{ lvs.lvs1 }}"  }
+
+- hosts: lvs02
+  remote_user: root
+  vars_files:
+    - common_vars.yml
+    - network_vars.yml
+
+  roles:
     - { role: ../lvs-web-dr/roles/deploy , site: "{{ lvs.lvs2 }}"  }
-    
+
