--- a/cluster1_flat/lvs-web-dr/roles/web_post/vars/main.yml
+++ b/cluster1_flat/lvs-web-dr/roles/web_post/vars/main.yml
@@ -1,10 +1,9 @@
-base_container: "{{ site.base_container }}"
 container_name: "{{ site.container_name }}"
+#hostname: "{{ site.hostname | default(site.container_name) }}"
+
+#WEB_IP: "{{ site.local_ip }}"
 
 personal_conf_dir: "config/{{ container_name }}"
-common_conf_dir: "config/common"
 
 container_dir: "{{ lxchost.lxc_dir }}/{{ container_name }}"
-repo_dir: "{{ manager.repo_dir }}"
-archive_dir: "{{ manager.archive_dir }}"
 
