--- a/cluster1_flat/lvs-web-dr/roles/web_pre/vars/main.yml
+++ b/cluster1_flat/lvs-web-dr/roles/web_pre/vars/main.yml
@@ -1,8 +1,8 @@
 base_container: "{{ site.base_container }}"
 container_name: "{{ site.container_name }}"
-hostname: "{{ site.hostname | default(site.container_name) }}"
 
-WEB_IP: "{{ site.local_ip }}"
+personal_conf_dir: "config/{{ container_name }}"
+common_conf_dir: "config/common"
 
 container_dir: "{{ lxchost.lxc_dir }}/{{ container_name }}"
 repo_dir: "{{ manager.repo_dir }}"
