--- a/cluster1_flat/lvs-web-dr/roles/destroy/tasks/main.yml
+++ b/cluster1_flat/lvs-web-dr/roles/destroy/tasks/main.yml
@@ -1,10 +1,8 @@
-- name: Stopped provious container
-  shell: lxc-stop -n {{ container_name }}
-  ignore_errors: yes
-  
-- name: Destroy provious container
-  shell: lxc-destroy -n {{ container_name }}
-  ignore_errors: yes
+- name: Destroy Container
+  lxc_container:
+    name: "{{ container_name }}"
+    state: absent
+
   
 
   
