--- a/kvm_demo/inventory/group_vars/lxchost.yml
+++ b/kvm_demo/inventory/group_vars/lxchost.yml
@@ -1,7 +1,7 @@
 lxchost:
   lxc_dir: /var/lib/lxc
   tmp_archive_dir: /tmp
-  manager_host: v205
+  manager_host: mng01
   
 manager:
   repo_dir: /work/image
