--- a/kvm_demo/image/roles/middle/files/var/lib/lxc/config
+++ b/kvm_demo/image/roles/middle/files/var/lib/lxc/config
@@ -1,8 +1,8 @@
 lxc.network.type = veth
 lxc.network.flags = up
-lxc.network.link = lbr01
-lxc.network.ipv4 = 192.168.1.101/24
-lxc.network.ipv4.gateway = 192.168.1.254
+lxc.network.link = {{ mnghost.lxc_default.iface }}
+lxc.network.ipv4 = {{ mnghost.lxc_default.ip }}
+lxc.network.ipv4.gateway = {{ mnghost.lxc_default.gateway }}
 
 lxc.rootfs = {{ middle_container_dir }}/rootfs
 
