--- a/kvm_demo/physical/roles/mnghost/files/etc/lxc/default.conf
+++ b/kvm_demo/physical/roles/mnghost/files/etc/lxc/default.conf
@@ -1,8 +1,8 @@
 lxc.network.type = veth
-lxc.network.link = lbr01
+lxc.network.link = {{ mnghost.lxc_default.iface }}
 lxc.network.flags = up
-lxc.network.ipv4 = 192.168.1.100/24
-lxc.network.ipv4.gateway = 192.168.1.254
+lxc.network.ipv4 = {{ mnghost.lxc_default.ip }}
+lxc.network.ipv4.gateway = {{ mnghost.lxc_default.gateway }}
 
 #lxc.id_map = u 0 493216 65536
 #lxc.id_map = g 0 493216 65536
