--- a/kvm_demo/inventory/group_vars/mnghost.yml
+++ b/kvm_demo/inventory/group_vars/mnghost.yml
@@ -1,11 +1,11 @@
 mnghost:
   bridge:
-    - name: "lbr01"
+    - name: &brdif "lbr01"
       iface: "eth0"
-      ip: "192.168.10.254"
+      ip: &brdip "192.168.10.254"
       mask: "255.255.255.0"
   lxc_default:
-    iface: "lbr01"
+    iface: *brdif
     ip: "192.168.10.101/24" # address/mask(8,16,...)
-    gateway: "192.168.10.254"
+    gateway: *brdip
     
