--- a/kvm_demo/lvs-web-dr/roles/web_pre/vars/main.yml
+++ b/kvm_demo/lvs-web-dr/roles/web_pre/vars/main.yml
@@ -1,8 +1,8 @@
 base_container: "{{ site.base_container }}"
 container_name: "{{ site.container_name }}"
 
-personal_conf_dir: "config/{{ container_name }}"
-common_conf_dir: "config/common"
+personal_conf_dir: "{{ config_dir }}/{{ container_name }}"
+common_conf_dir: "{{ config_dir }}/common"
 
 container_dir: "{{ lxchost.lxc_dir }}/{{ container_name }}"
 repo_dir: "{{ manager.repo_dir }}"
