add playbook to create config files from template.

--- a/kvm_demo/service1/lvs_conf.yml
+++ b/kvm_demo/service1/lvs_conf.yml
@@ -3,8 +3,8 @@
   gather_facts: False
   remote_user: root
   vars_files :
-    - vars_conf/common.yml
-    - vars_conf/config.yml
+    - vars/common.yml
+    - vars/config.yml
   roles:
     - { role: ../lvs-web-dr/roles/lvs_conf , site: "{{ lvs.lvs1 }}" }
     - { role: ../lvs-web-dr/roles/lvs_conf , site: "{{ lvs.lvs2 }}" }
