--- a/kvm_demo/lvs-web-dr/roles/lvs_post/handlers/main.yml
+++ b/kvm_demo/lvs-web-dr/roles/lvs_post/handlers/main.yml
@@ -11,3 +11,9 @@
     state: started
     container_command: |
       systemctl restart lvs-setup
+
+- name: restart container
+  debug: > 
+    msg="NOTIFY:{{ container_name }} config chenged.Please restart to enable the setting."
+
+    
