--- a/kvm_demo/lvs-web-dr/roles/lvs_post/tasks/main.yml
+++ b/kvm_demo/lvs-web-dr/roles/lvs_post/tasks/main.yml
@@ -2,7 +2,15 @@
   stat: path={{ container_dir }}
   register: rc
   failed_when: rc.stat.isdir == ' false '
-  
+
+- name: Create lxc config for this host. 
+  template: >
+    src={{ personal_conf_dir }}/config
+    dest={{ container_dir }}/config
+    mode='0644'
+  notify:
+    - restart container
+    
 - name: Copy hostname file
   copy: >
     src={{ personal_conf_dir }}/rootfs/{{ item.name }}
