--- a/kvm_demo/lvs-web-dr/roles/lvs_post/vars/main.yml
+++ b/kvm_demo/lvs-web-dr/roles/lvs_post/vars/main.yml
@@ -1,4 +1,5 @@
 container_name: "{{ site.container_name }}"
+hostname: "{{ site.hostname | default(site.container_name) }}"
 
 personal_conf_dir: "{{ config_dir }}/{{ container_name }}"
 
